add datetime to the trips
